[gd_scene load_steps=6 format=3 uid="uid://c7manlpxje4pd"]

[ext_resource type="Script" uid="uid://x5uvp0p6k5al" path="res://scripts/ui/pause_menu.gd" id="1_f6eus"]
[ext_resource type="Theme" uid="uid://5os27plblg4t" path="res://resources/ui/theme.tres" id="2_8uki6"]
[ext_resource type="StyleBox" uid="uid://baihiuteq2brc" path="res://resources/ui/panel_bg_outline.tres" id="3_0bnpd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wedc3"]
bg_color = Color(0, 0, 0, 0.352941)

[sub_resource type="LabelSettings" id="LabelSettings_wedc3"]
font_size = 64

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f6eus")

[node name="Backdrop" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wedc3")

[node name="Menu" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8uki6")
theme_override_styles/panel = ExtResource("3_0bnpd")

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Label" type="Label" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Game Paused"
label_settings = SubResource("LabelSettings_wedc3")
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Resume"

[node name="RestartButton" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Restart"

[node name="ExitButton" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Exit
"

[connection signal="pressed" from="Menu/VBoxContainer/ResumeButton" to="." method="close"]
[connection signal="pressed" from="Menu/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
